review 2, fixes, eval., disc., concl. drafted

--- a/egs/smartblinds/doc/bib/thesis_bibliography.bib
+++ b/egs/smartblinds/doc/bib/thesis_bibliography.bib
@@ -34,26 +34,26 @@
 
 @manual{ai-thinker:esp12e,
   title        = {ESP-12E WiFi Module},
-  organization = {AI-Thinker team},
+  author = {{AI-Thinker team}},
   year         = {2015},
   note         = {Version 1.0},
 }
 
 @manual{dallas:ds18b20,
   title        = {DS18B20 -- Programmable Resolution 1-Wire Digital Thermometer},
-  organization = {Maxim Integrated Products, Inc.},
+  author = {{Maxim Integrated Products, Inc.}},
   year         = {2019},
   note         = {19-7487; Rev 6; 7/19},
 }
 
 @manual{adafruit:tsl2591,
   title        = {Adafruit TSL2591 High Dynamic Range Digital Light Sensor},
-  organization = {Adafruit Industries},
+  author = {{Adafruit Industries}},
   year         = {2014}
 }
 
 @online{somfy:api,
-  organization = {Somfy},
+  author = {Somfy},
   title = {Somfy Open API Developer Portal | APIs \& Docs},
   year = 2018,
   url = {https://developer.somfy.com/apis-docs},
@@ -69,7 +69,7 @@
 }
 
 @online{mongodb:mongodb,
-  organization = {MongoDB, Inc.},
+  author = {{MongoDB, Inc.}},
   title = {MongoDB Documentation},
   year = 2021,
   url = {https://www.mongodb.com/docs/},
@@ -77,7 +77,7 @@
 }
 
 @online{keras:doc,
-  organization = {Keras},
+  author = {Keras},
   title = {Keras API reference},
   year = 2022,
   url = {https://keras.io/api/},
@@ -85,7 +85,7 @@
 }
 
 @online{apple:home,
-  organization = {Apple Inc.},
+  author = {{Apple Inc.}},
   title = {Apple Home},
   year = 2022,
   url = {https://www.apple.com/ios/home/},
@@ -93,7 +93,7 @@
 }
 
 @online{hass:hass,
-  organization = {Home Assistant},
+  author = {{Home Assistant}},
   title = {Home Assistant},
   year = 2022,
   url = {https://www.home-assistant.io/},
@@ -101,7 +101,7 @@
 }
 
 @online{openhab:openhab,
-  organization = {OpenHAB Foundation},
+  author = {{OpenHAB Foundation}},
   title = {OpenHAB},
   year = 2022,
   url = {https://www.openhab.org/},
@@ -109,6 +109,7 @@
 }
 
 @online{vercel:nextjs,
+  author = {Vercel},
   organization = {Vercel},
   title = {Next.js},
   year = 2022,
@@ -122,4 +123,34 @@
   year = 2011,
   url = {https://www.w3.org/TR/SVG11/},
   urldate = {2022-04-21}
+}
+
+@article{breiman:pfi,
+author = {Leo Breiman},
+year = {2001},
+month = {10},
+pages = {5-32},
+title = {Random Forests},
+volume = {45},
+journal = {Machine Learning},
+doi = {10.1023/A:1010950718922}
+}
+
+@article{hochreiter:lstm,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+journal = {Neural computation},
+doi = {10.1162/neco.1997.9.8.1735}
+}
+
+@book{lubinova:stineni,
+  author         = {Štěpánka Lubinová},
+  publisher      = {Grada Publishing},
+  title          = {Stínění oken: žaluzie, rolety, markýzy a slunolamy},
+  year           = {2013},
+  isbn           = {978-80-247-4579-4},
 }
