--- a/egs/smartblinds/doc/img/comm.tex
+++ b/egs/smartblinds/doc/img/comm.tex
@@ -1,7 +1,7 @@
 % Graphic for TeX using PGF
 % Title: C:\Users\vojta\Documents\Škola\bakalarka\iot\egs\smartblinds\doc\img\comm.dia
 % Creator: Dia v0.97.2
-% CreationDate: Wed Apr 06 21:03:56 2022
+% CreationDate: Tue May 10 22:27:14 2022
 % For: vojta
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
@@ -24,117 +24,66 @@
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (16.460703\du,7.976279\du)--(16.460703\du,8.976279\du)--(21.590703\du,8.976279\du)--(21.590703\du,7.976279\du)--cycle;
+\draw (17.600000\du,8.800000\du)--(17.600000\du,9.800000\du)--(22.600000\du,9.800000\du)--(22.600000\du,8.800000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (10.195703\du,7.976279\du)--(10.195703\du,8.976279\du)--(13.635703\du,8.976279\du)--(13.635703\du,7.976279\du)--cycle;
+\draw (10.200000\du,8.800000\du)--(10.200000\du,9.800000\du)--(13.640000\du,9.800000\du)--(13.640000\du,8.800000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (2.895703\du,8.426279\du)--(2.895703\du,10.151279\du)--(7.280703\du,10.151279\du)--(7.280703\du,8.426279\du)--cycle;
+\draw (2.900000\du,8.450000\du)--(2.900000\du,10.150000\du)--(7.300000\du,10.150000\du)--(7.300000\du,8.450000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (8.115703\du,4.826279\du)--(8.115703\du,5.826279\du)--(14.095703\du,5.826279\du)--(14.095703\du,4.826279\du)--cycle;
+\draw (16.621457\du,4.338312\du)--(16.621457\du,5.338312\du)--(22.601457\du,5.338312\du)--(22.601457\du,4.338312\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (0.345703\du,4.373779\du)--(0.345703\du,5.373779\du)--(5.673659\du,5.373779\du)--(5.673659\du,4.373779\du)--cycle;
+\draw (0.345703\du,3.914164\du)--(0.345703\du,4.914164\du)--(5.673659\du,4.914164\du)--(5.673659\du,3.914164\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (0.345703\du,2.898779\du)--(0.345703\du,3.898779\du)--(5.673659\du,3.898779\du)--(5.673659\du,2.898779\du)--cycle;
+\draw (0.345703\du,2.439164\du)--(0.345703\du,3.439164\du)--(5.673659\du,3.439164\du)--(5.673659\du,2.439164\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (3.009681\du,3.398779\du){ESP (Vojta)};
+\node at (3.009681\du,2.939164\du){ESP (Vojta)};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (3.009681\du,4.873779\du){ESP (out)};
+\node at (3.009681\du,4.414164\du){ESP (out)};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (11.109944\du,1.748051\du){OpenWeather};
+\node at (19.611457\du,4.838312\du){broker2mongo.py};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (11.105703\du,5.326279\du){broker2mongo.py};
+\node at (11.920000\du,9.300000\du){engine};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (11.915703\du,8.476279\du){engine};
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\node at (19.025703\du,8.476279\du){trénování NN};
+\node at (20.100000\du,9.300000\du){trénování NN};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
-\pgfsetbuttcap
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{5.673659\du}{6.276279\du}}
-\pgfpathcurveto{\pgfpoint{6.586659\du}{6.276279\du}}{\pgfpoint{7.193203\du}{5.928779\du}}{\pgfpoint{7.945703\du}{5.701279\du}}
-\pgfusepath{stroke}
-}
-\pgfsetlinewidth{0.050000\du}
-\pgfsetdash{}{0pt}
-\pgfsetdash{}{0pt}
-\pgfsetmiterjoin
-\pgfsetbuttcap
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{5.673659\du}{4.873779\du}}
-\pgfpathcurveto{\pgfpoint{6.370859\du}{4.873779\du}}{\pgfpoint{7.148203\du}{5.323779\du}}{\pgfpoint{7.948203\du}{5.323779\du}}
-\pgfusepath{stroke}
-}
-\pgfsetlinewidth{0.050000\du}
-\pgfsetdash{}{0pt}
-\pgfsetdash{}{0pt}
-\pgfsetmiterjoin
-\pgfsetbuttcap
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{5.673659\du}{3.398779\du}}
-\pgfpathcurveto{\pgfpoint{6.238059\du}{3.398779\du}}{\pgfpoint{7.298203\du}{4.773779\du}}{\pgfpoint{7.948203\du}{4.923779\du}}
-\pgfusepath{stroke}
-}
-\pgfsetlinewidth{0.050000\du}
-\pgfsetdash{{1.000000\du}{1.000000\du}}{0\du}
-\pgfsetdash{{0.150000\du}{0.150000\du}}{0\du}
 \pgfsetbuttcap
 {
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
@@ -144,34 +93,70 @@
 \pgfsetarrowsend{stealth}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (11.107209\du,2.505357\du)--(11.105800\du,4.676279\du);
+\pgfpathmoveto{\pgfpoint{5.823659\du}{5.816664\du}}
+\pgfpathcurveto{\pgfpoint{6.736659\du}{5.816664\du}}{\pgfpoint{6.903842\du}{5.524482\du}}{\pgfpoint{7.656342\du}{5.296982\du}}
+\pgfusepath{stroke}
+}
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{}{0pt}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfpathmoveto{\pgfpoint{5.823659\du}{4.414164\du}}
+\pgfpathcurveto{\pgfpoint{6.520859\du}{4.414164\du}}{\pgfpoint{6.874020\du}{4.872721\du}}{\pgfpoint{7.674020\du}{4.872721\du}}
+\pgfusepath{stroke}
+}
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{}{0pt}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfpathmoveto{\pgfpoint{5.823656\du}{2.940110\du}}
+\pgfpathcurveto{\pgfpoint{6.887107\du}{2.946815\du}}{\pgfpoint{6.781126\du}{4.220626\du}}{\pgfpoint{7.691697\du}{4.448460\du}}
+\pgfusepath{stroke}
 }
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (3.019681\du,6.276279\du){Home Assistant};
+\node at (3.014589\du,5.816664\du){Home Assistant};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (5.088203\du,9.288779\du){GUI};
+\node at (5.100000\du,9.300000\du){GUI};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (0.365703\du,5.776279\du)--(0.365703\du,6.776279\du)--(5.673659\du,6.776279\du)--(5.673659\du,5.776279\du)--cycle;
+\draw (0.355519\du,5.316664\du)--(0.355519\du,6.316664\du)--(5.673659\du,6.316664\du)--(5.673659\du,5.316664\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (19.013124\du,5.326279\du){MongoDB};
+\node at (16.386681\du,6.837946\du){MongoDB};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (17.048124\du,4.826279\du)--(17.048124\du,5.826279\du)--(20.978124\du,5.826279\du)--(20.978124\du,4.826279\du)--cycle;
+\draw (14.486681\du,6.337946\du)--(14.486681\du,7.337946\du)--(18.286681\du,7.337946\du)--(18.286681\du,6.337946\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{{1.000000\du}{0.400000\du}{0.200000\du}{0.400000\du}}{0cm}
 \pgfsetdash{{0.200000\du}{0.080000\du}{0.040000\du}{0.080000\du}}{0cm}
@@ -184,22 +169,9 @@
 \pgfsetarrowsend{stealth}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{14.095703\du}{5.326279\du}}
-\pgfpathcurveto{\pgfpoint{15.065143\du}{5.326279\du}}{\pgfpoint{15.928684\du}{5.326279\du}}{\pgfpoint{16.898124\du}{5.326279\du}}
+\pgfpathmoveto{\pgfpoint{19.611457\du}{5.338312\du}}
+\pgfpathcurveto{\pgfpoint{19.235129\du}{5.844986\du}}{\pgfpoint{17.094130\du}{5.333442\du}}{\pgfpoint{16.473052\du}{6.215308\du}}
 \pgfusepath{stroke}
-}
-\pgfsetlinewidth{0.050000\du}
-\pgfsetdash{{0.200000\du}{0.080000\du}{0.040000\du}{0.080000\du}}{0cm}
-\pgfsetdash{{0.200000\du}{0.080000\du}{0.040000\du}{0.080000\du}}{0cm}
-\pgfsetbuttcap
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (19.013124\du,5.826279\du)--(19.024826\du,7.826281\du);
 }
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{{0.200000\du}{0.080000\du}{0.040000\du}{0.080000\du}}{0cm}
@@ -213,39 +185,22 @@
 \pgfsetarrowsend{stealth}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{19.013124\du}{5.826279\du}}
-\pgfpathcurveto{\pgfpoint{18.980703\du}{6.539538\du}}{\pgfpoint{11.920915\du}{6.236976\du}}{\pgfpoint{11.916153\du}{7.826280\du}}
-\pgfusepath{stroke}
-}
-\pgfsetlinewidth{0.050000\du}
-\pgfsetdash{{0.200000\du}{0.200000\du}}{0\du}
-\pgfsetdash{{0.150000\du}{0.150000\du}}{0\du}
-\pgfsetmiterjoin
-\pgfsetbuttcap
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsstart{stealth}
-\pgfsetarrowsend{stealth}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{7.430696\du}{9.287270\du}}
-\pgfpathcurveto{\pgfpoint{9.055316\du}{9.270925\du}}{\pgfpoint{8.447331\du}{8.460564\du}}{\pgfpoint{10.045709\du}{8.474931\du}}
+\pgfpathmoveto{\pgfpoint{16.386681\du}{7.337946\du}}
+\pgfpathcurveto{\pgfpoint{15.788009\du}{8.443584\du}}{\pgfpoint{13.035709\du}{7.407284\du}}{\pgfpoint{12.013783\du}{8.682933\du}}
 \pgfusepath{stroke}
 }
 \pgfsetlinewidth{0.030000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
-\definecolor{dialinecolor}{rgb}{0.938039, 0.938039, 0.938039}
+\definecolor{dialinecolor}{rgb}{0.898039, 0.898039, 0.898039}
 \pgfsetfillcolor{dialinecolor}
-\fill (14.368243\du,0.419048\du)--(14.368243\du,3.679831\du)--(22.635569\du,3.679831\du)--(22.635569\du,0.419048\du)--cycle;
+\fill (14.368200\du,0.419048\du)--(14.368200\du,3.679831\du)--(22.635526\du,3.679831\du)--(22.635526\du,0.419048\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (14.368243\du,0.419048\du)--(14.368243\du,3.679831\du)--(22.635569\du,3.679831\du)--(22.635569\du,0.419048\du)--cycle;
+\draw (14.368200\du,0.419048\du)--(14.368200\du,3.679831\du)--(22.635526\du,3.679831\du)--(22.635526\du,0.419048\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
-\pgfsetdash{{0.150000\du}{0.150000\du}}{0\du}
+\pgfsetdash{{1.000000\du}{1.000000\du}}{0\du}
 \pgfsetdash{{0.150000\du}{0.150000\du}}{0\du}
 \pgfsetbuttcap
 {
@@ -254,16 +209,16 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (14.660031\du,1.766999\du)--(16.848440\du,1.766999\du);
+\draw (14.660000\du,1.767000\du)--(16.848400\du,1.767000\du);
 }
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (17.010545\du,1.750788\du){HTTP};
+\node[anchor=west] at (17.010500\du,1.750790\du){HTTP};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (17.010545\du,2.480258\du){MongoDB Wire};
+\node[anchor=west] at (17.010500\du,2.480260\du){MongoDB Wire};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{{0.150000\du}{0.060000\du}{0.030000\du}{0.060000\du}}{0cm}
 \pgfsetdash{{0.200000\du}{0.080000\du}{0.040000\du}{0.080000\du}}{0cm}
@@ -274,7 +229,7 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (16.832230\du,2.480258\du)--(14.676241\du,2.480258\du);
+\draw (16.832200\du,2.480260\du)--(14.676200\du,2.480260\du);
 }
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
@@ -286,16 +241,45 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (14.643820\du,3.193518\du)--(16.799809\du,3.193518\du);
+\draw (14.643800\du,3.193520\du)--(16.799800\du,3.193520\du);
 }
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (17.010545\du,3.209728\du){MQTT};
+\node[anchor=west] at (17.010500\du,3.209730\du){MQTT};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (18.501906\du,0.843004\du){Legenda protokolů};
+\node at (18.501900\du,0.843004\du){Legenda};
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{{1.000000\du}{1.000000\du}}{0\du}
+\pgfsetdash{{0.200000\du}{0.200000\du}}{0\du}
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (7.450000\du,9.300000\du)--(10.050000\du,9.300000\du);
+}
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{}{0pt}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (7.828772\du,4.340384\du)--(7.828772\du,5.340384\du)--(15.293038\du,5.340384\du)--(15.293038\du,4.340384\du)--cycle;
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node at (11.560905\du,4.840384\du){mqttDataCollector.py};
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node at (11.534161\du,1.748050\du){OpenWeather};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{}{0pt}
@@ -306,8 +290,8 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{10.765159\du}{0.979587\du}}
-\pgfpatharc{342}{180}{0.791422\du and 0.791422\du}
+\pgfpathmoveto{\pgfpoint{11.189462\du}{0.997264\du}}
+\pgfpatharc{342}{180}{0.791448\du and 0.791448\du}
 \pgfusepath{stroke}
 }
 \pgfsetlinewidth{0.050000\du}
@@ -320,8 +304,8 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{11.770910\du}{0.778101\du}}
-\pgfpatharc{322}{226}{0.784160\du and 0.784160\du}
+\pgfpathmoveto{\pgfpoint{12.195166\du}{0.778101\du}}
+\pgfpatharc{322}{226}{0.784122\du and 0.784122\du}
 \pgfusepath{stroke}
 }
 \pgfsetlinewidth{0.050000\du}
@@ -334,8 +318,8 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{12.987050\du}{1.449327\du}}
-\pgfpatharc{369}{217}{0.748755\du and 0.748755\du}
+\pgfpathmoveto{\pgfpoint{13.411350\du}{1.449326\du}}
+\pgfpatharc{369}{217}{0.748783\du and 0.748783\du}
 \pgfusepath{stroke}
 }
 \pgfsetlinewidth{0.050000\du}
@@ -348,7 +332,7 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (8.846423\du,2.354572\du)--(13.368191\du,2.356142\du);
+\draw (9.270681\du,2.354570\du)--(13.792461\du,2.356140\du);
 }
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
@@ -360,8 +344,8 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{9.233931\du}{1.242084\du}}
-\pgfpatharc{289}{110}{0.589300\du and 0.589300\du}
+\pgfpathmoveto{\pgfpoint{9.675870\du}{1.242084\du}}
+\pgfpatharc{289}{110}{0.589302\du and 0.589302\du}
 \pgfusepath{stroke}
 }
 \pgfsetlinewidth{0.050000\du}
@@ -374,8 +358,51 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathmoveto{\pgfpoint{13.358467\du}{2.366585\du}}
-\pgfpatharc{420}{260}{0.542659\du and 0.542659\du}
+\pgfpathmoveto{\pgfpoint{13.782720\du}{2.366584\du}}
+\pgfpatharc{420}{260}{0.542667\du and 0.542667\du}
 \pgfusepath{stroke}
+}
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{{1.000000\du}{0.400000\du}{0.200000\du}{0.400000\du}}{0cm}
+\pgfsetdash{{0.200000\du}{0.080000\du}{0.040000\du}{0.080000\du}}{0cm}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\pgfpathmoveto{\pgfpoint{16.386681\du}{7.337946\du}}
+\pgfpathcurveto{\pgfpoint{17.166857\du}{8.478939\du}}{\pgfpoint{19.167373\du}{7.454092\du}}{\pgfpoint{20.014566\du}{8.676707\du}}
+\pgfusepath{stroke}
+}
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{}{0pt}
+\pgfsetdash{}{0pt}
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (15.293038\du,4.840384\du)--(16.471457\du,4.838546\du);
+}
+\pgfsetlinewidth{0.050000\du}
+\pgfsetdash{{0.150000\du}{0.150000\du}}{0\du}
+\pgfsetdash{{0.200000\du}{0.200000\du}}{0\du}
+\pgfsetbuttcap
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\pgfsetarrowsstart{stealth}
+\pgfsetarrowsend{stealth}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (11.558689\du,4.190400\du)--(11.533787\du,2.505339\du);
 }
 \end{tikzpicture}
