--- a/egs/smartblinds/doc/tab/tab_topics.tex
+++ b/egs/smartblinds/doc/tab/tab_topics.tex
@@ -22,6 +22,6 @@
     \bottomrule
     \bottomrule
     \end{tabular}%
-    \caption[Příznaky a jejich MQTT témata]{Příznaky a jejich MQTT témata. Tabulka zachycuje názvy příznaků a odpovídající témata pro odesílání jejich naměřených hodnot.}
+    \caption[Příznaky a jejich MQTT témata]{Názvy příznaků a MQTT témata, kam se hodnoty příznaků odesílají, a která odebírá skript \file{mqttDataCollector.py}.}
 \label[]{tab:topics}
 \end{table}%
