--- a/egs/smartblinds/doc/tex/sett/acronyms.tex
+++ b/egs/smartblinds/doc/tex/sett/acronyms.tex
@@ -1,13 +1,12 @@
 \makeglossaries
 
-\newacronym{dps}{DPS}{deska plošných spojů}
-\newacronym{atp}{atp.}{a tak podobně}
-\newacronym{mcu}{MCU}{microcontroller unit}
-\newacronym{url}{URL}{uniform resource locator}
-\newacronym{gui}{GUI}{Graphical User Interface}
-\newacronym{chmu}{ČHMÚ}{Český hydrometeorologický ústav}
-\newacronym{ffnn}{FFNN}{feed-forward neural network}
-\newacronym{lstm}{LSTM}{long short-term memory}
-\newacronym{mse}{MSE}{střední kvadratická odchylka (mean squared error)}
-\newacronym{api}{API}{aplikační rozhraní}
-\newacronym{nn}{NS}{neuronová síť}
+\newacronym{dps}{DPS}{Deska plošných spojů}
+\newacronym{mcu}{MCU}{Microcontroller Unit (jednočipový počítač)}
+\newacronym{url}{URL}{Uniform Resource Locator}
+\newacronym{gui}{GUI}{Graphical User Interface (grafické uživatelské rozhraní)}
+% \newacronym{chmu}{ČHMÚ}{Český hydrometeorologický ústav}
+\newacronym{ffnn}{FFNN}{Feedforward Neural Network (dopředná neuronová síť)}
+\newacronym{lstm}{LSTM}{Long Short-Term Memory (druh rekurentní neuronové sítě)}
+\newacronym{mse}{MSE}{Mean Squared Error (střední kvadratická odchylka)}
+\newacronym{api}{API}{Application Programming Interface (rozhraní pro programování aplikací)}
+\newacronym{nn}{NS}{Neuronová síť}
