added abstract, fixes

--- a/egs/smartblinds/doc/main.tex
+++ b/egs/smartblinds/doc/main.tex
@@ -15,7 +15,7 @@
 \mainmatter 										% Begin numeric (1,2,3...) page numbering
 \pagestyle{thesis} 									% Return the page headers back to the "thesis" style
 \include{tex/chap/chap_introduction}
-\include{tex/chap/chap_background.tex}
+% \include{tex/chap/chap_background.tex}
 \include{tex/chap/chap_features}
 \include{tex/chap/chap_hardware.tex}
 \include{tex/chap/chap_data_collection.tex}
@@ -29,7 +29,8 @@
 % ------------------------------------------------------------------------------------------------------
 \appendix 											% Cue to tell LaTeX that the following "chapters" are Appendices
 \renewcommand{\thechapter}{A\arabic{chapter}}		% Appendices A1, A2, ...
-\include{tex/appx/app_structure_of_the_workspace}
+% \include{tex/appx/app_structure_of_the_workspace}
+\include{tex/appx/app_grid_search.tex}
 % ------------------------------------------------------------------------------------------------------
 \end{document}  
 % ------------------------------------------------------------------------------------------------------
